--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,8 @@
     <script src="/vendor/loader.js"></script>
     <script src="/vendor/ember-resolver/dist/ember-resolver.js"></script>
     <script src="/vendor/ic-ajax/main.js"></script>
+    <script src="/vendor/modernizr/modernizr.js"></script>
+    <script src="/vendor/foundation/js/foundation.min.js"></script>
 
   <!-- endbuild -->
 
